backend/Service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app
  namespace: <namespace>
  labels:
    app: todo-app
spec:
  ports:
  - port: 8080
  selector:
     app: todo-app
     tier: app
