backend/Ingress-app.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todo-app
  namespace: <namespace>
spec:
  rules:
  - host: <...k8s.local>
    http:
      paths:
      - path: /
        backend:
          serviceName: todo-app
          servicePort: 8080
